--- a/index.html
+++ b/index.html
@@ -24,14 +24,15 @@
 
 				<!-- Nav -->
 					<nav id="nav">
-						<ul>
-							<li id="home"><a href="#intro"><span>Home</span></a></li>
-							<li><a href="#one">Présentation</a></li>
-							<li><a href="#two">Parcours</a></li>
-							<li><a href="#three">Compétences</a></li>
-							<li><a href="#work">Réalisations</a></li>
-							<li><a href="#contact">Contact</a></li>
+						<ul class="topnav">
+							<li class="col1" id="home"><a href="#intro"><span>Home</span></a></li>
+							<li class="col1"><a href="#one">Présentation</a></li>
+							<li class="col1"><a href="#two">Parcours</a></li>
+							<li class="col1"><a href="#three">Compétences</a></li>
+							<li class="col1"><a href="#work">Réalisations</a></li>
+							<li class="col1"><a href="#contact">Contact</a></li>
 						</ul>
+				<div class="menu-burger"><img src="images/burger-01.png"></img></div>
 					</nav>
 
 			</header>
