--- a/index.html
+++ b/index.html
@@ -106,10 +106,11 @@ Vous avez accès à mon CV papier ci-dessous.</p>
 						<div class="container 75% gallery">
 							<div class="row 0% images">
 								<div class="6u 12u(mobile)"><iframe width="560" height="315" src="https://www.youtube.com/embed/DcVXq36-1-8" frameborder="0" allowfullscreen class="image fit from-left"></iframe></div>
-								<div class="6u 12u(mobile)"><a href="images/fulls/02.jpg" class="image fit from-right"><img src="images/thumbs/02.jpg" title="Airchitecture II" alt="" /></a></div>
+								<!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/RFh85YhVDvk" frameborder="0" allowfullscreen class="image fit from-right"></iframe> -->
+								<div class="6u 12u(mobile)"><iframe width="560" height="315" src="https://www.youtube.com/embed/RFh85YhVDvk" frameborder="0" allowfullscreen class="image fit from-right" ></iframe></div>
 							</div>
 							<div class="row 0% images">
-								<div class="6u 12u(mobile)"><a href="images/fulls/03.jpg" class="image fit from-left"><img src="images/thumbs/03.jpg" title="Air Lounge" alt="" /></a></div>
+								<div class="6u 12u(mobile)"><iframe width="560" height="315" src="https://www.youtube.com/embed/qroIS9oSk2A" frameborder="0" allowfullscreen class="image fit from-left"></iframe></div>
 								<div class="6u 12u(mobile)"><a href="images/fulls/Picto-01.png" class="image fit from-right"><img src="images/thumbs/Picto-01.jpg" title="Pictogrammes réalisés sur Illustrator en cours d'Art." alt="" /></a></div>
 							</div>
 							<div class="row 0% images">
